Change fonts, fix spacings

--- a/app/assets/stylesheets/ui/typeface.css
+++ b/app/assets/stylesheets/ui/typeface.css
@@ -1,5 +1,5 @@
 .body-text {
-  font-family: 'Recia', serif;
+  font-family: 'Excon', sans-serif;
 }
 
 .title-text {
